change severe sentences and plus pictures

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>おみくじ</title>
-    <meta name="description" content="ページの概要">
+    <meta name="description" content="おみくじを引いて神社を探そう！">
     <meta name="viewport" content="width=device-width">
     <link href="css/index.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&family=Zen+Maru+Gothic&family=Dela+Gothic+One&family=Cherry+Bomb+One&family=Kaisei+Decol&display=swap" rel="stylesheet">
@@ -12,11 +12,13 @@
     <header class="header"></header>
 
     <main class="main">
-        <p class="result">ここにおみくじ結果が出ます</p>
+        <p class="result">ここにおみくじ結果が出るよ！</p>
+        <img class="shrine-image" src="" alt="神社の写真" style="display: none; max-width: 80%; height: auto; border-radius: 10px; margin: 10px 0;">
         <a class="shrine-link" href="#" target="_blank" style="display: none;">おすすめの神社はこちら</a>
-    <br>
+        <br>
         <button id="draw-button">おみくじを引く</button>
     </main>
+
 
     <footer class="footer"></footer>
 
