Added animation for drawing lots and experimental animation for drawing a big lucky draw

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             </div>
             <button id="draw-button">おみくじを引く</button>
         </div>
+        <!-- くじアニメーション -->
+        <div class="omikuji-loading" style="display: none;">
+            <p class="omikuji-rolling">おみくじを引いています…</p>
+        </div>
+
     </main>
 
     <footer class="footer"></footer>
