--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
     <body>
         <header>
             <h1>⛩ Find Shrine by Drawing Fortune ⛩</h1>
-            <p class="sub">ここらへんに神社の画像が出る！</p>
+            <p class="sub">ここらへんに神社の画像が出る予定！</p>
         </header>
 
     <!-- メインビジュアル -->
     <section class="main-visual">
-        <img src="images/main-shrine.jpg" alt="神社の写真">
+        <img src="img/main-shrine.jpg" alt="神社の写真">
     </section>
 
     <!-- おみくじ風クリックセクション -->
         <section class="omikuji-area">
             <h2>おみくじ風に神社を探す</h2>
                 <div class="omikuji-list">
-                    <!-- 神社紹介ページへのリンク（仮ページ名） -->
+                    <!-- 神社紹介ページへのリンク -->
                     <a href="shrine-list.html" class="omikuji">神社を一覧で探す</a>
                     
-                    <!-- おみくじページ（すでに作成済）へのリンク -->
+                    <!-- おみくじページへのリンク -->
                     <a href="omikuji.html" class="omikuji">おみくじで運命の神社を！</a>
                 </div>
         </section>
