--- a/shrine/meiji.html
+++ b/shrine/meiji.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <title>明治神宮</title>
-    <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="../css/index.css">
+  <meta charset="UTF-8">
+  <title>明治神宮</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../css/index.css">
+  <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
 </head>
 <body>
-    <main class="main">
-        <h1>明治神宮</h1>
-        <p id="omikuji-result" style="display: none; font-weight: bold; font-size: 1.5rem; color: crimson;"></p>
+  <div class="main">
+    <!-- 背景画像 -->
+    <div class="background-image" style="background-image: url('../img/meiji.jpg');"></div>
 
-        <img src="../img/meiji.jpg" alt="明治神宮" style="max-width: 80%; border-radius: 10px;">
-        <p>明治神宮は東京都渋谷区にある格式高い神社で、初詣の参拝者数は日本一を誇ります。</p>
-        <p>明治天皇と昭憲皇太后をお祀りし、自然豊かな森に囲まれた癒しの空間です。</p>
-        <a href="../index.html">← おみくじに戻る</a>
-    </main>
+    <div class="result-container">
+      <h1>明治神宮</h1>
+      <p id="omikuji-result" style="display: none; font-size: 1.5rem;"></p>
+
+      <div class="shrine-info">
+        <p>
+          明治神宮は東京都渋谷区にある格式高い神社で、<br>
+          初詣の参拝者数は日本一を誇ります。
+        </p>
+        <p>
+          明治天皇と昭憲皇太后をお祀りし、<br>
+          自然豊かな森に囲まれた癒しの空間です。
+        </p>
+        <a href="../omikuji.html">おみくじに戻る</a>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    // URLから ?result=◯◯ を取得
+    const params = new URLSearchParams(window.location.search);
+    const result = params.get("result");
+
+    if (result) {
+      const container = document.getElementById("omikuji-result");
+      container.textContent = `あなたの運勢は… ${result}！`;
+      container.style.display = "block";
+      if (result.includes('大吉')) {
+        container.classList.add("big-daikichi");
+      }
+    }
+  </script>
 </body>
-<script>
-  // URLから ?result=◯◯ を取得
-  const params = new URLSearchParams(window.location.search);
-  const result = params.get("result");
-
-  if (result) {
-    const container = document.getElementById("omikuji-result");
-    container.textContent = `あなたの運勢は… ${result}！`;
-    container.style.display = "block";
-  }
-</script>
 </html>
