--- a/omikuji.html
+++ b/omikuji.html
@@ -9,7 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&family=Zen+Maru+Gothic&family=Dela+Gothic+One&family=Cherry+Bomb+One&family=Kaisei+Decol&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header"></header>
+    <header>
+            <h1 id="clickable-title">⛩ Find Shrine by Drawing Fortune ⛩</h1>
+            <p class="sub">ここらへんに神社の画像が出る予定！</p>
+    </header>
 
     <main class="main">
         <div class="background-image"></div>
@@ -33,5 +36,11 @@
     <footer class="footer"></footer>
 
     <script src="js/index.js"></script>
+    <script>
+        document.getElementById("clickable-title").addEventListener("click", function () {
+            // クリック時の動作
+            window.location.href = "index.html";
+        });
+    </script>
 </body>
 </html>
