--- a/shrine-list.html
+++ b/shrine-list.html
@@ -16,11 +16,13 @@
   </header>
 
   <main>
-    <section class="shrine fadein">
-      <img src="img/washi.jpg" alt="鷲神社">
-      <h2>鷲神社（浅草）</h2>
-      <p>開運の神様として知られる鷲神社は、酉の市で有名です。</p>
-    </section>
+    <a href="introduction-shrines/washi2.html" class="shrine-link">
+      <section class="shrine fadein">
+        <img src="img/washi.jpg" alt="鷲神社">
+        <h2>鷲神社（浅草）</h2>
+        <p>開運の神様として知られる鷲神社は、酉の市で有名です。</p>
+      </section>
+    </a>
 
     <section class="shrine fadein">
       <img src="img/fushimi.jpg" alt="伏見稲荷大社">
