--- a/introduction-shrines/washi2.html
+++ b/introduction-shrines/washi2.html
@@ -25,7 +25,7 @@
       <p><strong>所在地：</strong>東京都台東区千束3-18-7</p>
       <p><strong>アクセス：</strong>東京メトロ日比谷線「入谷駅」より徒歩約7分</p>
     </section>
-    <a href="shrine-list.html" class="back-button">一覧に戻る</a>
+    <a href="../shrine-list.html" class="back-button">一覧に戻る</a>
   </main>
   <footer>
     <p>&copy; 2025 神社紹介サイト</p>
