--- a/introduction-shrines/fushimi2.html
+++ b/introduction-shrines/fushimi2.html
@@ -1,3 +1,4 @@
+<!-- 伏見稲荷大社（fushimi2.html） 拡張版 -->
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -14,18 +15,31 @@
     <img src="../img/fushimi.jpg" alt="伏見稲荷大社" class="main-image">
     <section class="description">
       <h2>神社の紹介</h2>
-      <p>伏見稲荷大社は京都市伏見区に位置する、全国の稲荷神社の総本宮です。千本鳥居で有名で、赤い鳥居が連なる参道は神秘的な雰囲気に包まれています。</p>
+      <p>伏見稲荷大社は、全国に約3万社ある稲荷神社の総本宮であり、京都を代表する観光スポットの一つです。五穀豊穣・商売繁盛の神として、古くから多くの参拝者を集めています。千本鳥居で有名な参道は、幻想的な朱色のトンネルが続くことで人気です。</p>
+
       <h2>ご利益</h2>
       <ul>
         <li>商売繁盛</li>
         <li>五穀豊穣</li>
         <li>家内安全</li>
+        <li>交通安全</li>
       </ul>
+
+      <h2>授与品・お守り・御朱印</h2>
+      <p><strong>お守り：</strong> 商売繁盛、家内安全、交通安全など、稲荷大神のご神徳を受けた多様なお守りが頒布されています。女性に人気の「幸運守」や「縁結び守」もあります。</p>
+      <p><strong>御朱印：</strong> 伏見稲荷大社では、本殿だけでなく奥社奉拝所・御膳谷奉拝所・伏見神宝神社の御朱印もいただくことができます。</p>
+      <p><strong>絵馬：</strong> 狐の顔の形をした「おもかる絵馬」があり、顔に自分で表情を描いて願い事を書くユニークなスタイルが人気です。</p>
+
+      <h2>年間行事</h2>
+      <p><strong>初詣（1月）：</strong> 全国から多くの参拝者が訪れ、特に元日は大変混雑します。</p>
+      <p><strong>稲荷祭（春）：</strong> 神輿の渡御などが行われる大祭で、華やかなお祭りです。</p>
+      <p><strong>本宮祭（7月）：</strong> 夏の夜に行われる幻想的な神事で、参道に灯籠が並び幻想的な雰囲気が広がります。</p>
+
       <h2>基本情報</h2>
       <p><strong>所在地：</strong>京都府京都市伏見区深草薮之内町68</p>
-      <p><strong>アクセス：</strong>JR奈良線「稲荷駅」下車すぐ</p>
+      <p><strong>アクセス：</strong>JR奈良線「稲荷駅」下車すぐ／京阪本線「伏見稲荷駅」より徒歩5分</p>
     </section>
-    <a href="shrine-list.html" class="back-button">一覧に戻る</a>
+    <a href="../shrine-list.html" class="back-button">一覧に戻る</a>
   </main>
   <footer>
     <p>&copy; 2025 神社紹介サイト</p>
