--- a/introduction-shrines/kawagoe2.html
+++ b/introduction-shrines/kawagoe2.html
@@ -25,7 +25,7 @@
       <p><strong>所在地：</strong>埼玉県川越市宮下町2-11-3</p>
       <p><strong>アクセス：</strong>川越駅よりバスで約10分</p>
     </section>
-    <a href="shrine-list.html" class="back-button">一覧に戻る</a>
+    <a href="../shrine-list.html" class="back-button">一覧に戻る</a>
   </main>
   <footer>
     <p>&copy; 2025 神社紹介サイト</p>
