--- a/introduction-shrines/meiji2.html
+++ b/introduction-shrines/meiji2.html
@@ -25,7 +25,7 @@
       <p><strong>所在地：</strong>東京都渋谷区代々木神園町1-1</p>
       <p><strong>アクセス：</strong>JR原宿駅・東京メトロ明治神宮前駅より徒歩すぐ</p>
     </section>
-    <a href="shrine-list.html" class="back-button">一覧に戻る</a>
+    <a href="../shrine-list.html" class="back-button">一覧に戻る</a>
   </main>
   <footer>
     <p>&copy; 2025 神社紹介サイト</p>
