--- a/introduction-shrines/sumiyoshi2.html
+++ b/introduction-shrines/sumiyoshi2.html
@@ -25,7 +25,7 @@
       <p><strong>所在地：</strong>大阪府大阪市住吉区住吉2-9-89</p>
       <p><strong>アクセス：</strong>南海本線「住吉大社駅」より徒歩3分</p>
     </section>
-    <a href="shrine-list.html" class="back-button">一覧に戻る</a>
+    <a href="../shrine-list.html" class="back-button">一覧に戻る</a>
   </main>
   <footer>
     <p>&copy; 2025 神社紹介サイト</p>
