I'll leave it to future me
To do list ➡
Change the button image
Change the web icon
Make it jump to the official page

--- a/omikuji.html
+++ b/omikuji.html
@@ -5,13 +5,13 @@
     <title>おみくじ</title>
     <meta name="description" content="おみくじを引いて神社を探そう！">
     <meta name="viewport" content="width=device-width">
-    <link href="css/index.css" rel="stylesheet">
+    <link href="css/omikuji.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&family=Zen+Maru+Gothic&family=Dela+Gothic+One&family=Cherry+Bomb+One&family=Kaisei+Decol&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-            <h1 id="clickable-title">⛩ Find Shrine by Drawing Fortune ⛩</h1>
-            <p class="sub">ここらへんに神社の画像が出る予定！</p>
+        <h1 id="clickable-title">⛩ Find Shrine by Drawing Fortune ⛩</h1>
+        <p class="sub">ここらへんに神社の画像が出る予定！</p>
     </header>
 
     <main class="main">
