--- a/shrine/fushimi.html
+++ b/shrine/fushimi.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>伏見稲荷大社</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../css/index.css">
+  <link rel="stylesheet" href="../css/omikuji_result.css">
   <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
 </head>
 <body>
