--- a/introduction-shrines/meiji2.html
+++ b/introduction-shrines/meiji2.html
@@ -8,22 +8,39 @@
 </head>
 <body>
   <header>
-    <h1>明治神宮（東京）</h1>
+    <div class="header">
+      <h1><a href="../index.html">⛩ Find Shrine by Drawing Fortune ⛩</a></h1>
+      <h2></h2>
+    </div>
+    <div class="wave"></div>
   </header>
   <main>
     <img src="../img/meiji.jpg" alt="明治神宮" class="main-image">
     <section class="description">
       <h2>神社の紹介</h2>
-      <p>明治神宮は明治天皇と昭憲皇太后を祀る神社で、原宿駅近くにありながら広大な杜に囲まれた静謐な空間です。初詣の参拝者数日本一を誇ります。</p>
+      <p>明治神宮は、明治天皇と昭憲皇太后を祀る神社で、1920年に創建されました。東京都心の渋谷区にありながら、広大な鎮守の森に囲まれており、静けさと荘厳な雰囲気が漂います。参道を歩くだけで心が洗われるような、癒しの空間として多くの人々に親しまれています。</p>
+
       <h2>ご利益</h2>
       <ul>
         <li>家内安全</li>
-        <li>厄除け</li>
-        <li>心身浄化</li>
+        <li>学業成就</li>
+        <li>心願成就</li>
+        <li>安産祈願</li>
       </ul>
+
+      <h2>授与品・お守り・御朱印</h2>
+      <p><strong>お守り：</strong> 健康守や学業成就守、安産守など多様な御守りがあります。特に「心願成就守」は、落ち着いたデザインで老若男女に人気です。</p>
+      <p><strong>御朱印：</strong> 本殿でいただける御朱印には、明治天皇と昭憲皇太后を祀る印が丁寧に押印されており、格式高い印象です。</p>
+      <p><strong>絵馬：</strong> 願い事が書かれた絵馬が神楽殿の横にたくさん奉納されており、世界中からの参拝者の願いが込められています。</p>
+
+      <h2>年間行事</h2>
+      <p><strong>初詣（1月）：</strong> 全国でも屈指の初詣参拝者数を誇り、300万人以上が訪れます。</p>
+      <p><strong>春の大祭（5月）：</strong> 神楽の奉納や武道演武などが行われ、伝統文化に触れる機会となります。</p>
+      <p><strong>明治祭（11月）：</strong> 明治天皇の御命日に行われる祭事で、明治神宮の最も重要な行事のひとつです。</p>
+
       <h2>基本情報</h2>
       <p><strong>所在地：</strong>東京都渋谷区代々木神園町1-1</p>
-      <p><strong>アクセス：</strong>JR原宿駅・東京メトロ明治神宮前駅より徒歩すぐ</p>
+      <p><strong>アクセス：</strong>JR「原宿駅」または東京メトロ「明治神宮前駅」より徒歩すぐ</p>
     </section>
     <a href="../shrine-list.html" class="back-button">一覧に戻る</a>
   </main>
