--- a/introduction-shrines/washi2.html
+++ b/introduction-shrines/washi2.html
@@ -9,7 +9,11 @@
 </head>
 <body>
   <header>
-    <h1>鷲神社（浅草）</h1>
+    <div class="header">
+      <h1><a href="../index.html">⛩ Find Shrine by Drawing Fortune ⛩</a></h1>
+      <h2></h2>
+    </div>
+    <div class="wave"></div>
   </header>
   <main>
     <img src="../img/washi.jpg" alt="鷲神社" class="main-image">
