--- a/shrine-list.html
+++ b/shrine-list.html
@@ -2,15 +2,15 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>日本の美しい神社</title>
+  <title>⛩ Find Shrine by Drawing Fortune ⛩</title>
   <link rel="stylesheet" href="css/shrine-list.css">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
     <div class="header-content">
-      <h1>日本の美しい神社</h1>
-      <p>伝統と自然が織りなす神聖な空間を巡る</p>
+      <h1><a href="index.html">⛩ Find Shrine by Drawing Fortune ⛩</a></h1>
+      <h2></h2>
     </div>
     <div class="wave"></div>
   </header>
