--- a/introduction-shrines/fushimi2.html
+++ b/introduction-shrines/fushimi2.html
@@ -9,7 +9,11 @@
 </head>
 <body>
   <header>
-    <h1>伏見稲荷大社（京都）</h1>
+    <div class="header">
+      <h1><a href="../index.html">⛩ Find Shrine by Drawing Fortune ⛩</a></h1>
+      <h2></h2>
+    </div>
+    <div class="wave"></div>
   </header>
   <main>
     <img src="../img/fushimi.jpg" alt="伏見稲荷大社" class="main-image">
