--- a/introduction-shrines/kawagoe2.html
+++ b/introduction-shrines/kawagoe2.html
@@ -1,3 +1,4 @@
+<!-- 川越氷川神社（kawagoe2.html） 拡張版 -->
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -8,22 +9,39 @@
 </head>
 <body>
   <header>
-    <h1>川越氷川神社（埼玉）</h1>
+    <div class="header">
+      <h1><a href="../index.html">⛩ Find Shrine by Drawing Fortune ⛩</a></h1>
+      <h2></h2>
+    </div>
+    <div class="wave"></div>
   </header>
   <main>
     <img src="../img/kawagoe.jpg" alt="川越氷川神社" class="main-image">
     <section class="description">
       <h2>神社の紹介</h2>
-      <p>川越氷川神社は縁結びの神様として有名で、風鈴回廊や絵馬トンネルなどフォトジェニックな装飾が多く、若者やカップルに人気の神社です。</p>
+      <p>川越氷川神社は、縁結びのご利益で知られる埼玉県川越市にある神社です。古くから川越総鎮守として崇敬され、夫婦の神様を祀っていることから、恋愛成就や家族円満を願う人々が多く訪れます。特に夏の「風鈴回廊」は幻想的な美しさで有名です。</p>
+
       <h2>ご利益</h2>
       <ul>
         <li>縁結び</li>
-        <li>夫婦円満</li>
-        <li>家庭円満</li>
+        <li>家内安全</li>
+        <li>安産祈願</li>
+        <li>厄除け</li>
       </ul>
+
+      <h2>授与品・お守り・御朱印</h2>
+      <p><strong>お守り：</strong> 縁結び守りの種類が非常に豊富で、恋守、えんむすび玉、夫婦円満守など、デザインも華やかで若い世代に人気です。</p>
+      <p><strong>御朱印：</strong> 通常御朱印のほか、季節限定や風鈴祭り限定のカラフルな御朱印も頒布されます。</p>
+      <p><strong>おみくじ：</strong> 鯛みくじが名物で、釣り竿で釣るような形式で楽しみながら運勢を占えます。</p>
+
+      <h2>年間行事</h2>
+      <p><strong>初詣（1月）：</strong> 川越の初詣スポットとして多くの参拝客で賑わいます。</p>
+      <p><strong>縁むすび風鈴（7月〜9月）：</strong> 約2000個の風鈴が境内に吊るされ、夜はライトアップも行われる幻想的な行事です。</p>
+      <p><strong>例大祭（10月）：</strong> 神輿が街を巡り、地域とのつながりを深める重要な行事です。</p>
+
       <h2>基本情報</h2>
       <p><strong>所在地：</strong>埼玉県川越市宮下町2-11-3</p>
-      <p><strong>アクセス：</strong>川越駅よりバスで約10分</p>
+      <p><strong>アクセス：</strong>東武東上線・JR川越線「川越駅」よりバスで約10分、「宮下町」下車 徒歩すぐ</p>
     </section>
     <a href="../shrine-list.html" class="back-button">一覧に戻る</a>
   </main>
