--- a/introduction-shrines/fushimi2.html
+++ b/introduction-shrines/fushimi2.html
@@ -42,6 +42,16 @@
       <h2>基本情報</h2>
       <p><strong>所在地：</strong>京都府京都市伏見区深草薮之内町68</p>
       <p><strong>アクセス：</strong>JR奈良線「稲荷駅」下車すぐ／京阪本線「伏見稲荷駅」より徒歩5分</p>
+
+      <div class="map-container">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13175.730935623158!2d135.75214552290136!3d34.967139572517825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x600109b3f6caa2e5%3A0x3cf70dc49e89b100!2z5Y2X5Lqs5Z-O5aSn6Iqx5a2m!5e0!3m2!1sja!2sjp!4v1721455776336!5m2!1sja!2sjp"
+          allowfullscreen
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+      </div>
+
     </section>
     <a href="../shrine-list.html" class="back-button">一覧に戻る</a>
   </main>
