--- a/introduction-shrines/meiji2.html
+++ b/introduction-shrines/meiji2.html
@@ -41,6 +41,16 @@
       <h2>基本情報</h2>
       <p><strong>所在地：</strong>東京都渋谷区代々木神園町1-1</p>
       <p><strong>アクセス：</strong>JR「原宿駅」または東京メトロ「明治神宮前駅」より徒歩すぐ</p>
+
+      <div class="map-container">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.122398465979!2d139.69633007576128!3d35.67639817258537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ca974f364f3%3A0xf754cb7e25b2c99f!2z5ZCI5p2R5Z-O5aSn!5e0!3m2!1sja!2sjp!4v1721455866703!5m2!1sja!2sjp"
+          allowfullscreen
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+      </div>
+
     </section>
     <a href="../shrine-list.html" class="back-button">一覧に戻る</a>
   </main>
