--- a/introduction-shrines/washi2.html
+++ b/introduction-shrines/washi2.html
@@ -39,6 +39,15 @@
       <h2>基本情報</h2>
       <p><strong>所在地：</strong>東京都台東区千束3-18-7</p>
       <p><strong>アクセス：</strong>東京メトロ日比谷線「入谷駅」より徒歩約7分</p>
+
+      <div class="map-container">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.6201962025624!2d139.78935127576055!3d35.72278897257783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ed843c1df91%3A0xb15f71be1d79146!2z5a6u5Z-O5biC5p2-5bGL5Y2X6aeF!5e0!3m2!1sja!2sjp!4v1721455742947!5m2!1sja!2sjp"
+          allowfullscreen
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+      </div>
     </section>
     <a href="../shrine-list.html" class="back-button">一覧に戻る</a>
   </main>
