--- a/introduction-shrines/kawagoe2.html
+++ b/introduction-shrines/kawagoe2.html
@@ -42,6 +42,16 @@
       <h2>基本情報</h2>
       <p><strong>所在地：</strong>埼玉県川越市宮下町2-11-3</p>
       <p><strong>アクセス：</strong>東武東上線・JR川越線「川越駅」よりバスで約10分、「宮下町」下車 徒歩すぐ</p>
+
+      <div class="map-container">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3247.239778651893!2d139.47594497575394!3d35.91407977252688!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018cd45699a4f99%3A0xa9cf7b123b5d9aa8!2z5bed5bed5rGg6Iqx5a2m!5e0!3m2!1sja!2sjp!4v1721455822706!5m2!1sja!2sjp"
+          allowfullscreen
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+      </div>
+
     </section>
     <a href="../shrine-list.html" class="back-button">一覧に戻る</a>
   </main>
