--- a/introduction-shrines/sumiyoshi2.html
+++ b/introduction-shrines/sumiyoshi2.html
@@ -28,10 +28,6 @@
         <li>厄除け</li>
       </ul>
 
-      <h2>基本情報</h2>
-      <p><strong>所在地：</strong>大阪府大阪市住吉区住吉2丁目9-89</p>
-      <p><strong>アクセス：</strong>南海本線「住吉大社駅」から徒歩3分／阪堺電気軌道「住吉鳥居前駅」すぐ</p>
-
       <h2>授与品・お守り・御朱印</h2>
       <p><strong>お守り：</strong> 海上安全を祈願する「航海守」や、旅行者向けの「交通安全守」が有名。干支をあしらった可愛いお守りも人気です。</p>
       <p><strong>御朱印：</strong> 朱印帳を持参すれば本殿で御朱印をいただけます。干支ごとの限定御朱印もあります。</p>
@@ -41,6 +37,19 @@
       <p><strong>初詣（1月）：</strong> 関西有数の初詣スポットとして200万人を超える参拝者が訪れます。</p>
       <p><strong>住吉祭（7月末～8月1日）：</strong> 「おはらい神事」「神輿渡御」などが行われ、大阪の夏の風物詩となっています。</p>
       <p><strong>節分祭（2月）：</strong> 厄除け祈願として、豆まきや福餅まきなどが盛大に行われます。</p>
+
+      <h2>基本情報</h2>
+      <p><strong>所在地：</strong>大阪府大阪市住吉区住吉2丁目9-89</p>
+      <p><strong>アクセス：</strong>南海本線「住吉大社駅」から徒歩3分／阪堺電気軌道「住吉鳥居前駅」すぐ</p>
+
+      <div class="map-container">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13143.169460723775!2d135.48683817373114!3d34.61296027121511!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000db4961ccbfbb%3A0x4c4cd956612b165a!2z5aSn5a6u5Z-O5a2m!5e0!3m2!1sja!2sjp!4v1721455665587!5m2!1sja!2sjp"
+          allowfullscreen
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+      </div>
     </section>
     <a href="../shrine-list.html" class="back-button">一覧に戻る</a>
   </main>
