Add icons, change various colors, add footer, add hamburger menu
A wonderful shrine covered in good fortune!

--- a/index.html
+++ b/index.html
@@ -7,12 +7,35 @@
     <link rel="stylesheet" href="css/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Zen+Old+Mincho&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Kaisei+Decol&family=Yuji+Boku&display=swap" rel="stylesheet">
+    <link rel="icon" href="img/torippi.png" type="image/png">
 </head>
 
 <body>
     <header>
         <h1 id="clickable-title">⛩ Find Shrine by Drawing Fortune ⛩</h1>
-        <p class="sub">ここらへんに神社の画像が出る予定！</p>
+        <p class="sub">~運命の神社と巡り合う~</p>
+
+    <!-- ハンバーガー -->
+    <div class="hamburger" id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+
+    <!-- オーバーレイ（暗背景） -->
+    <div class="overlay" id="overlay"></div>
+
+    <!-- スライドメニュー -->
+        <nav class="side-menu" id="side-menu">
+            <ul>
+                <li><a href="index.html">ホーム</a></li>
+                <li><a href="shrine-list.html">神社一覧</a></li>
+                <li><a href="omikuji.html">おみくじ</a></li>
+                <li><a href="#top">トップへ戻る</a></li>
+            </ul>
+        </nav>
+
+
     </header>
 
     <!-- メインビジュアル -->
@@ -44,7 +67,36 @@
         <div class="nuki"></div>
         </div>
     </div>
-    
+
+    <footer class="site-footer">
+    <div class="footer-inner">
+        <p>2025 六根清浄. All rights reserved.</p>
+        <ul class="footer-links">
+        <li><a href="index.html">ホーム</a></li>
+        <li><a href="shrine-list.html">神社一覧</a></li>
+        <li><a href="omikuji.html">おみくじ</a></li>
+        <li><a href="#top">トップへ戻る</a></li>
+        </ul>
+    </div>
+    </footer>
+
 
 </body>
+<script>
+  const hamburger = document.getElementById('hamburger');
+  const sideMenu = document.getElementById('side-menu');
+  const overlay = document.getElementById('overlay');
+
+  hamburger.addEventListener('click', () => {
+    sideMenu.classList.toggle('open');
+    overlay.classList.toggle('show');
+  });
+
+  overlay.addEventListener('click', () => {
+    sideMenu.classList.remove('open');
+    overlay.classList.remove('show');
+  });
+</script>
+
+
 </html>
