--- a/shrine-list.html
+++ b/shrine-list.html
@@ -55,6 +55,19 @@
         <p>朱塗りの建物が美しい神社で、海の安全や航海の守り神として信仰を集めています。</p>
       </section>
     </a>
+
+    <section class="shrine fadein">
+      <h2>Coming soon...</h2>
+    </section>
+
+    <section class="shrine fadein">
+      <h2>Coming soon...</h2>
+    </section>
+
+    <section class="shrine fadein">
+      <h2>Coming soon...</h2>
+    </section>
+
   </main>
 
   <footer>
