--- a/introduction-shrines/sumiyoshi2.html
+++ b/introduction-shrines/sumiyoshi2.html
@@ -53,8 +53,16 @@
     </section>
     <a href="../shrine-list.html" class="back-button">一覧に戻る</a>
   </main>
-  <footer>
-    <p>&copy; 2025 神社紹介サイト</p>
+  <footer class="site-footer">
+    <div class="footer-inner">
+        <p>2025 六根清浄. All rights reserved.</p>
+        <ul class="footer-links">
+        <li><a href="../index.html">ホーム</a></li>
+        <li><a href="../shrine-list.html">神社一覧</a></li>
+        <li><a href="../omikuji.html">おみくじ</a></li>
+        <li><a href="#top">トップへ戻る</a></li>
+        </ul>
+    </div>
   </footer>
 </body>
 </html>
