--- a/shrine/sumiyoshi.html
+++ b/shrine/sumiyoshi.html
@@ -22,10 +22,23 @@
           伝統的な「住吉造り」の本殿や反橋（そりばし）など、<br>
           美しい景観も楽しめます。
         </p>
+        <a href="https://www.nihondaiichisumiyoshigu.jp/">公式ホームページはこちら！</a><br>
         <a href="../omikuji.html">おみくじに戻る</a>
       </div>
     </div>
   </div>
+
+  <footer class="site-footer">
+    <div class="footer-inner">
+        <p>2025 六根清浄. All rights reserved.</p>
+        <ul class="footer-links">
+        <li><a href="../index.html">ホーム</a></li>
+        <li><a href="../shrine-list.html">神社一覧</a></li>
+        <li><a href="../omikuji.html">おみくじ</a></li>
+        <li><a href="#top">トップへ戻る</a></li>
+        </ul>
+    </div>
+  </footer>
 
   <script>
     // URLから ?result=◯◯ を取得
