--- a/shrine/fushimi.html
+++ b/shrine/fushimi.html
@@ -22,10 +22,23 @@
           朱色の「千本鳥居」は世界的にも有名で、<br>
           商売繁盛や五穀豊穣の神様として多くの人々に親しまれています。
         </p>
+        <a href="https://inari.jp/">公式ホームページはこちら！</a><br>
         <a href="../omikuji.html">おみくじに戻る</a>
       </div>
     </div>
   </div>
+
+  <footer class="site-footer">
+    <div class="footer-inner">
+        <p>2025 六根清浄. All rights reserved.</p>
+        <ul class="footer-links">
+        <li><a href="../index.html">ホーム</a></li>
+        <li><a href="../shrine-list.html">神社一覧</a></li>
+        <li><a href="../omikuji.html">おみくじ</a></li>
+        <li><a href="#top">トップへ戻る</a></li>
+        </ul>
+    </div>
+  </footer>
 
   <script>
     // URLから ?result=◯◯ を取得
