--- a/shrine/kawagoe.html
+++ b/shrine/kawagoe.html
@@ -22,10 +22,23 @@
           夏には「縁むすび風鈴」など、幻想的なイベントも開催され、<br>
           インスタ映えスポットとしても有名です。
         </p>
+        <a href="https://www.kawagoehikawa.jp/">公式ホームページはこちら！</a><br>
         <a href="../omikuji.html">おみくじに戻る</a>
       </div>
     </div>
   </div>
+
+  <footer class="site-footer">
+    <div class="footer-inner">
+        <p>2025 六根清浄. All rights reserved.</p>
+        <ul class="footer-links">
+        <li><a href="../index.html">ホーム</a></li>
+        <li><a href="../shrine-list.html">神社一覧</a></li>
+        <li><a href="../omikuji.html">おみくじ</a></li>
+        <li><a href="#top">トップへ戻る</a></li>
+        </ul>
+    </div>
+  </footer>
 
   <script>
     // URLから ?result=◯◯ を取得
