--- a/shrine/washi.html
+++ b/shrine/washi.html
@@ -25,10 +25,23 @@
           毎年11月の「酉の市」では、<br>
           多くの人が縁起物の熊手を求めて訪れます。
         </p>
+        <a href="https://otorisama.or.jp/">公式ホームページはこちら！</a><br>
         <a href="../omikuji.html">おみくじに戻る</a>
       </div>
     </div>
   </div>
+
+  <footer class="site-footer">
+    <div class="footer-inner">
+        <p>2025 六根清浄. All rights reserved.</p>
+        <ul class="footer-links">
+        <li><a href="../index.html">ホーム</a></li>
+        <li><a href="../shrine-list.html">神社一覧</a></li>
+        <li><a href="../omikuji.html">おみくじ</a></li>
+        <li><a href="#top">トップへ戻る</a></li>
+        </ul>
+    </div>
+  </footer>
 
   <script>
     // URLから ?result=◯◯ を取得
